syntax = "proto3";

package share.p2p.shrex.sub;

message RecentEDSNotification {
  int64 height = 1;
  bytes data_hash = 2;
}

